; ModuleID = '/home/carl/AnghaBench/git/extr_sequencer.c_is_final_fixup.c'
source_filename = "/home/carl/AnghaBench/git/extr_sequencer.c_is_final_fixup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.todo_list = type { i32, i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.todo_list*)* @is_final_fixup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_final_fixup(%struct.todo_list* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.todo_list*, align 8
  %4 = alloca i32, align 4
  store %struct.todo_list* %0, %struct.todo_list** %3, align 8
  %5 = load %struct.todo_list*, %struct.todo_list** %3, align 8
  %6 = getelementptr inbounds %struct.todo_list, %struct.todo_list* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 8
  store i32 %7, i32* %4, align 4
  %8 = load %struct.todo_list*, %struct.todo_list** %3, align 8
  %9 = getelementptr inbounds %struct.todo_list, %struct.todo_list* %8, i32 0, i32 2
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = load i32, i32* %4, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i64 %12
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i64 @is_fixup(i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %54

19:                                               ; preds = %1
  br label %20

20:                                               ; preds = %52, %19
  %21 = load i32, i32* %4, align 4
  %22 = add nsw i32 %21, 1
  store i32 %22, i32* %4, align 4
  %23 = load %struct.todo_list*, %struct.todo_list** %3, align 8
  %24 = getelementptr inbounds %struct.todo_list, %struct.todo_list* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = icmp slt i32 %22, %25
  br i1 %26, label %27, label %53

27:                                               ; preds = %20
  %28 = load %struct.todo_list*, %struct.todo_list** %3, align 8
  %29 = getelementptr inbounds %struct.todo_list, %struct.todo_list* %28, i32 0, i32 2
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** %29, align 8
  %31 = load i32, i32* %4, align 4
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i64 %32
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = call i64 @is_fixup(i32 %35)
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %39

38:                                               ; preds = %27
  store i32 0, i32* %2, align 4
  br label %54

39:                                               ; preds = %27
  %40 = load %struct.todo_list*, %struct.todo_list** %3, align 8
  %41 = getelementptr inbounds %struct.todo_list, %struct.todo_list* %40, i32 0, i32 2
  %42 = load %struct.TYPE_2__*, %struct.TYPE_2__** %41, align 8
  %43 = load i32, i32* %4, align 4
  %44 = sext i32 %43 to i64
  %45 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %42, i64 %44
  %46 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %45, i32 0, i32 0
  %47 = load i32, i32* %46, align 4
  %48 = call i32 @is_noop(i32 %47)
  %49 = icmp ne i32 %48, 0
  br i1 %49, label %51, label %50

50:                                               ; preds = %39
  br label %53

51:                                               ; preds = %39
  br label %52

52:                                               ; preds = %51
  br label %20

53:                                               ; preds = %50, %20
  store i32 1, i32* %2, align 4
  br label %54

54:                                               ; preds = %53, %38, %18
  %55 = load i32, i32* %2, align 4
  ret i32 %55
}

declare dso_local i64 @is_fixup(i32) #1

declare dso_local i32 @is_noop(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
